# Accord

./: .gitignore  ACCORD_MEMORY.md  README.md  main.py  pyproject.toml  techstack.md
accord-llm/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
accord-llm/app/: config.py  main.py  personas.py
accord-llm/scripts/: benchmark.py  configure_vllm.sh  select_model.py
accord-llm/systemd/: accord-llm-middleware.service  accord-vllm.service
backend/: .env  .env.example  package-lock.json  package.json
backend/src/: server.js
backend/src/config/: index.js
backend/src/middleware/: errorHandler.js
backend/src/routes/: contractState.js  deliver.js  fund.js  negotiate.js  refund.js  release.js  verify.js
backend/src/services/: algorandService.js  negotiationEngine.js  optimizer.js  sellers.js
contract/: algokit.toml  requirements.txt
contract/artifacts/: DealEscrow.approval.teal
contract/scripts/: deploy.py
contract/smart_contracts/deal_escrow/: DealEscrow.approval.puya.map  DealEscrow.approval.teal  contract.py
contract/smart_contracts/deal_escrow/artifacts/: deploy_output.json  (+2 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: BuyerForm.jsx  ChatWindow.jsx  ContractConditions.jsx  DealSummary.jsx  DeliverySimulation.jsx  EscrowStatus.jsx  StatusTimeline.jsx  WalletConnect.jsx
frontend/src/config/: constants.js
frontend/src/hooks/: useWallet.js
frontend/src/styles/: index.css
frontend/src/utils/: algorand.js
tmp/: gen_wallet.py
