[project]
name = "accord-llm"
version = "0.1.0"
description = "Accord negotiation middleware for ROCm/vLLM-backed seller personas"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.10.1",
    "uvicorn[standard]>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
